--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: cfpersi/smb-broker
+  tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
