Update pod when a new docker image has been pushed
[#169576558](https://www.pivotaltracker.com/story/show/169576558)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   repository: cfpersi/smb-broker
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
