Ensure go111module env variable is set when running tests
[#167875436](https://www.pivotaltracker.com/story/show/167875436)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -7,7 +7,7 @@ install:
 
 test:
 	GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo
-	ginkgo -r -keepGoing -p -trace -randomizeAllSpecs -progress
+	GO111MODULE=on ginkgo -r -keepGoing -p -trace -randomizeAllSpecs -progress
 
 fmt:
 	go fmt ./... -v
