Update Makefile to recreate pods (to ensure that the latest docker image is used from dockerhub)
[#167875452](https://www.pivotaltracker.com/story/show/167875452)
Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -16,7 +16,7 @@ image:
 	docker build -t cfpersi/smb-broker .
 
 helm:
-	helm status smb-dev-broker | grep 'STATUS: DEPLOYED' && helm upgrade smb-dev-broker ./helm || helm install --name smb-dev-broker ./helm
+	helm status smb-dev-broker | grep 'STATUS: DEPLOYED' && helm upgrade --recreate-pods smb-dev-broker ./helm || helm install --name smb-dev-broker ./helm
 
 helm_delete:
 	helm delete --purge smb-dev-broker
