--- a/smb-broker/Dockerfile
+++ b/smb-broker/Dockerfile
@@ -3,5 +3,5 @@ FROM golang:alpine
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
-RUN go build -o main .
+RUN go build -o main -mod=vendor .
 CMD ["./main"]
