--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -30,11 +30,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /v2/catalog
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /v2/catalog
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
