Deploy smb-broker onto a local k8s cluster
- Needed to TDD smb-broker interacting with the k8s api-server
- Spins up a local kind cluster to target and run kubectl + helm
commands against
- The pipeline docker image still needs to be updated
- Tests still need to build / upload an image for helm to use

[#169169378](https://www.pivotaltracker.com/story/show/169169378)

--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -19,12 +19,13 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: "localhost"
+      paths:
+      - "/v2"
 
   tls: []
   #  - secretName: chart-example-tls
