Create a smaller smbbroker image
[#164283399](https://www.pivotaltracker.com/story/show/164283399)

Co-authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Dockerfile
+++ b/smb-broker/Dockerfile
@@ -1,7 +1,11 @@
-FROM golang:alpine
-
+FROM golang:alpine as builder
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
 RUN go build -o main -mod=vendor .
+
+FROM alpine
+RUN mkdir /app
+COPY --from=builder /app/main /app/main
+WORKDIR /app
 CMD ["./main"]
