Run ginkgo tests with -v
[#169169378](https://www.pivotaltracker.com/story/show/169169378)

Co-authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -7,7 +7,7 @@ install:
 
 test:
 	GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo
-	GO111MODULE=on ginkgo -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
+	GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
 
 fmt:
 	go fmt ./... -v
