Add scripts to build a docker image that can run docker (that is configured to run kind)
[#169169378](https://www.pivotaltracker.com/story/show/169169378)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/ci/unit-tests.yml
+++ b/smb-broker/ci/unit-tests.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
+    repository: cfpersi/smb-broker-k8s-tests
     tag: latest
 
 inputs:
