Build and upload the smb-broker docker image to a local registry that the kind cluster will pull from
[#169169378](https://www.pivotaltracker.com/story/show/169169378)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -12,10 +12,15 @@ test:
 fmt:
 	go fmt ./... -v
 
-image:
+running	:=	"$(shell docker inspect -f '{{.State.Running}}' "kind-registry" 2>/dev/null || true)"
+image-local-registry: SHELL:=/bin/bash
+image-local-registry:
+	[ $(running) != "true" ] && docker run \
+	    -d --restart=always -p "5000:5000" --name "kind-registry" \
+	    registry:2 || true
 	docker build -t cfpersi/smb-broker .
-	docker tag cfpersi/smb-broker cfpersi/smb-broker:dev
-	docker push cfpersi/smb-broker:dev
+	docker tag cfpersi/smb-broker localhost:5000/cfpersi/smb-broker:local-test
+	docker push localhost:5000/cfpersi/smb-broker:local-test
 
 helm:
 	helm status smb-dev-broker | grep 'STATUS: DEPLOYED' && helm upgrade --recreate-pods smb-dev-broker ./helm || helm install --name smb-dev-broker ./helm
@@ -29,4 +34,4 @@ helm_delete:
 fly:
 	fly -t persi execute -c /Users/pivotal/workspace/smb-volume-k8s-release/smb-broker/ci/unit-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release -p
 
-.PHONY: install test fmt image release helm helm_delete helm-dev fly
+.PHONY: install test fmt image-local-registry release helm helm_delete helm-dev fly
