Create a persistent volume claim on provision of a service
[#169169378](https://www.pivotaltracker.com/story/show/169169378)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -15,7 +15,7 @@ metadata:
   name: create-pv
 rules:
   - apiGroups: ["v1", ""]
-    resources: ["persistentvolumes", "persistentvolumesclaims"]
+    resources: ["persistentvolumes", "persistentvolumeclaims"]
     verbs: ["get", "list", "create"]
 
 ---
