--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -16,7 +16,7 @@ metadata:
 rules:
   - apiGroups: ["v1", ""]
     resources: ["persistentvolumes", "persistentvolumeclaims"]
-    verbs: ["get", "list", "create"]
+    verbs: ["get", "list", "create", "delete"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
