Prevent 'too many files open' error
- ensure the shell can open lots of files required by this test suite.  (On some mac machines it defaults to 256 files open which is not enough)

[#169169074](https://www.pivotaltracker.com/story/show/169169074)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -6,6 +6,7 @@ install:
 	go install -v
 
 test:
+	ulimit -n 10000
 	GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo
 	GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
 
