Introduce kustomize variable to keep service name and reference in sync
- also make sure the mutatingwebhook and eirini ext certificates get deleted on undeploy

[#169169074](https://www.pivotaltracker.com/story/show/169169074)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/eirini-persi/Makefile
+++ b/eirini-persi/Makefile
@@ -2,6 +2,8 @@ build:
 	kubectl kustomize ./base | kubectl apply -f -
 
 delete:
+	kubectl delete mutatingwebhookconfiguration eirini-x-mutating-hook-eirini -n eirini || true
+	kubectl delete secret eirini-x-setupcertificate -n eirini || true
 	kubectl kustomize ./base | kubectl delete -f -
 
-.PHONY: build
+.PHONY: build delete
