--- a/eirini-persi/base/kustomization.yaml
+++ b/eirini-persi/base/kustomization.yaml
@@ -1,5 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: eirini
+namePrefix: acceptance-
+
+vars:
+  - name: EIRINI_EXT_SERVICE
+    objref:
+      kind: Service
+      name: eirini-ext-svc
+      apiVersion: v1
+
 resources:
   - rbac.yaml
   - services.yaml
