Fix error when building eirini-persi docker image
- we were missing the source code of eirini-persi when building the binary.

[#169169074](https://www.pivotaltracker.com/story/show/169169074)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/eirini-persi/ci/dockerfiles/eirini-persi/Dockerfile
+++ b/eirini-persi/ci/dockerfiles/eirini-persi/Dockerfile
@@ -1,11 +1,12 @@
 FROM golang:alpine as builder
 RUN mkdir /app
-ADD ../../.. /app/
-WORKDIR /app
-RUN CGO_ENABLED=0 go build -o "${BASEDIR}/binaries/eirini-persi" -ldflags="-X github.com/SUSE/eirini-persi/version.Version=dev" cmd/eirini-ext/main.go
+ADD https://github.com/SUSE/eirini-persi/archive/master.tar.gz /app/eirini-persi.tar.gz
+RUN cd /app/ && tar xvfz eirini-persi.tar.gz
+WORKDIR /app/eirini-persi-master
+RUN CGO_ENABLED=0 go build -o "./binaries/eirini-persi" -ldflags="-X github.com/SUSE/eirini-persi/version.Version=dev" cmd/eirini-ext/main.go
 
 FROM alpine
 RUN mkdir /app
-COPY --from=builder /app/binaries/eirini-persi /app/main
+COPY --from=builder /app/eirini-persi-master/binaries/eirini-persi /app/main
 WORKDIR /app
 CMD ["./main"]
