Print commit sha when building eirini-persi image
- it might be useful for debugging future issues to know which version of  the source code of eirini-persi
was used to build the docker image

[#169169074](https://www.pivotaltracker.com/story/show/169169074)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/eirini-persi/ci/dockerfiles/eirini-persi/Dockerfile
+++ b/eirini-persi/ci/dockerfiles/eirini-persi/Dockerfile
@@ -1,5 +1,6 @@
 FROM golang:alpine as builder
 RUN mkdir /app
+RUN wget https://api.github.com/repos/SUSE/eirini-persi/git/ref/heads/master && cat master
 ADD https://github.com/SUSE/eirini-persi/archive/master.tar.gz /app/eirini-persi.tar.gz
 RUN cd /app/ && tar xvfz eirini-persi.tar.gz
 WORKDIR /app/eirini-persi-master
