Rename eirini-ext -> eirini-persi
- added status to the eirini-persi makefile

[#169169074](https://api.github.com/repos/SUSE/eirini-persi/git/ref/heads/master)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/eirini-persi/Makefile
+++ b/eirini-persi/Makefile
@@ -6,4 +6,7 @@ delete:
 	kubectl delete secret eirini-x-setupcertificate -n eirini || true
 	kubectl kustomize ./base | kubectl delete -f -
 
-.PHONY: build delete
+status:
+	kubectl kustomize ./base | kubectl describe -f -
+
+.PHONY: build delete status
