--- a/eirini-persi/base/ingress.yaml
+++ b/eirini-persi/base/ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   annotations:
     ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
-  name: eirini-ext
+  name: eirini-persi
 spec:
   rules:
-    - host: eirini-ext.app.cf.ephemeral-eirini-gke-2.cf-app.com
+    - host: eirini-persi.app.cf.ephemeral-eirini-gke-2.cf-app.com
       http:
         paths:
           - backend:
-              serviceName: eirini-ext-svc
+              serviceName: eirini-persi-svc
               servicePort: https
             path: /
