--- a/eirini-persi/base/pods.yaml
+++ b/eirini-persi/base/pods.yaml
@@ -2,16 +2,16 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    app.kubernetes.io/instance: eirini-ext
-    app.kubernetes.io/name: eirini-ext
-  name: eirini-ext
+    app.kubernetes.io/instance: eirini-persi
+    app.kubernetes.io/name: eirini-persi
+  name: eirini-persi
 spec:
-  serviceAccountName: eirini-ext-volume-services
+  serviceAccountName: eirini-persi-volume-services
   automountServiceAccountToken: true
   containers:
-  - image: cfpersi/eirini-ext
+  - image: cfpersi/eirini-persi
     imagePullPolicy: Always
-    name: eirini-ext
+    name: eirini-persi
     env:
     - name: OPERATOR_WEBHOOK_HOST
       value: 0.0.0.0
