--- a/eirini-persi/base/services.yaml
+++ b/eirini-persi/base/services.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eirini-ext-svc
+  name: eirini-persi-svc
 spec:
   ports:
     - name: https
@@ -9,5 +9,5 @@ spec:
       protocol: TCP
       targetPort: 443
   selector:
-    app.kubernetes.io/instance: eirini-ext
-    app.kubernetes.io/name: eirini-ext
+    app.kubernetes.io/instance: eirini-persi
+    app.kubernetes.io/name: eirini-persi
