Split out environment specific information when deploying eirini-persi
- any env specific config will be contained in their respective 'overlay' directory. In this commit we only have 1 env. (ephemeral-env)

[#169169074](https://www.pivotaltracker.com/story/show/169169074)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/eirini-persi/Makefile
+++ b/eirini-persi/Makefile
@@ -4,9 +4,9 @@ build:
 delete:
 	kubectl delete mutatingwebhookconfiguration eirini-x-mutating-hook-eirini -n eirini || true
 	kubectl delete secret eirini-x-setupcertificate -n eirini || true
-	kubectl kustomize ./base | kubectl delete -f -
+	kubectl kustomize ./ephemeral-env | kubectl delete -f -
 
 status:
-	kubectl kustomize ./base | kubectl describe -f -
+	kubectl kustomize ./ephemeral-env | kubectl describe -f -
 
 .PHONY: build delete status
