--- a/eirini-persi/ephemeral-env/ingress_patch.yaml
+++ b/eirini-persi/ephemeral-env/ingress_patch.yaml
@@ -1,13 +1,11 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  annotations:
-    ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: nginx
   name: eirini-persi
 spec:
   rules:
-    - http:
+    - host: eirini-persi.app.cf.ephemeral-env-eirini-gke-2.cf-app.com
+      http:
         paths:
           - backend:
               serviceName: eirini-persi-svc
