Add smb csi driver test pipeline files
- added a helpful make fly command to run fly one-off jobs

[#170690947](https://www.pivotaltracker.com/story/show/170690947)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -1,4 +1,11 @@
 build:
 	go build .
 
-.PHONY: build
+test:
+	go get github.com/onsi/ginkgo/ginkgo
+	ginkgo -flakeAttempts 3 -race -focus "Identity Service"
+
+fly:
+	fly -t persi execute -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
+
+.PHONY: build test
