Make identity and node sanity tests run on a kind cluster
[#170691266](https://www.pivotaltracker.com/story/show/170691266)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -11,12 +11,18 @@ image-local-registry:
 	docker tag cfpersi/smb-plugin localhost:5000/cfpersi/smb-plugin:local-test
 	docker push localhost:5000/cfpersi/smb-plugin:local-test
 
+start-docker:
+	start-docker &
+	until docker info; do sleep 1; done
+
+kill-docker:
+	pkill dockerd
 
 test:
 	go get github.com/onsi/ginkgo/ginkgo
-	ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
+	~/go/bin/ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
 
 fly:
-	fly -t persi execute -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
+	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
 
 .PHONY: build test image-local-registry
