--- a/smb-csi-driver/Dockerfile
+++ b/smb-csi-driver/Dockerfile
@@ -1,10 +1,10 @@
-FROM golang:alpine as builder
+FROM golang as builder
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
 RUN go build -o main -mod=vendor .
 
-FROM alpine
+FROM golang
 RUN mkdir /app
 COPY --from=builder /app/main /app/main
 WORKDIR /app
