--- a/smb-csi-driver/ci/integration-tests.yml
+++ b/smb-csi-driver/ci/integration-tests.yml
@@ -4,12 +4,12 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
-    tag: 1.13
+    repository: cfpersi/smb-broker-k8s-tests
+    tag: latest
 
 inputs:
   - name: smb-volume-k8s-release
 
 run:
   path: make
-  args: [ "--directory=smb-volume-k8s-release/smb-csi-driver", "test" ]
+  args: [ "--directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "image-local-registry", "test", "kill-docker" ]
