Use renamed docker image
[#170691266](https://www.pivotaltracker.com/story/show/170691266)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/ci/integration-tests.yml
+++ b/smb-csi-driver/ci/integration-tests.yml
@@ -5,7 +5,7 @@ image_resource:
   type: docker-image
   privileged: true
   source:
-    repository: cfpersi/smb-broker-k8s-tests
+    repository: cfpersi/smb-k8s-kind
     tag: latest
 
 inputs:
