--- a/smb-broker/ci/unit-tests.yml
+++ b/smb-broker/ci/unit-tests.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: cfpersi/smb-broker-k8s-tests
+    repository: cfpersi/smb-k8s-kind
     tag: latest
 
 inputs:
