Timeout out starting docker daemon
[#170691266](https://www.pivotaltracker.com/story/show/170691266)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -13,7 +13,9 @@ image-local-registry:
 
 start-docker:
 	start-docker &
-	until docker info; do sleep 1; done
+	echo 'until docker info; do sleep 5; done' >/usr/local/bin/wait_for_docker
+	chmod +x /usr/local/bin/wait_for_docker
+	timeout 300 wait_for_docker
 
 kill-docker:
 	pkill dockerd
