--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -24,6 +24,12 @@ test:
 	go get github.com/onsi/ginkgo/ginkgo
 	~/go/bin/ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
 
+e2e: SHELL:=/bin/bash
+e2e:
+	go get github.com/onsi/ginkgo/ginkgo
+	cd test
+	~/go/bin/ginkgo -r -focus "CSI Volumes"
+
 fly:
 	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
 
