Fix makefile e2e tests
- Otherwise this runs the main test suite
- cd does not work in makefile as expected
[#170938410](https://www.pivotaltracker.com/story/show/170938410)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -27,8 +27,7 @@ test:
 e2e: SHELL:=/bin/bash
 e2e:
 	go get github.com/onsi/ginkgo/ginkgo
-	cd test
-	~/go/bin/ginkgo -r -focus "CSI Volumes"
+	cd test && pwd && ~/go/bin/ginkgo -r -focus "CSI Volumes"
 
 fly:
 	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
