Link kubectl binary to /usr/local/bin/kubectl path
- This path is used by e2e tests
[#170938410](https://www.pivotaltracker.com/story/show/170938410)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/ci/dockerfiles/tests/Dockerfile
+++ b/ci/dockerfiles/tests/Dockerfile
@@ -30,6 +30,7 @@ RUN curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add 
 RUN echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list
 RUN apt-get update
 RUN apt-get install -y kubectl
+RUN ln -s /usr/bin/kubectl /usr/local/bin/kubectl
 
 RUN wget https://get.helm.sh/helm-v3.0.2-linux-amd64.tar.gz
 RUN tar -zxvf helm-v3.0.2-linux-amd64.tar.gz
