--- a/integration-tests/assets/reader_pod.yaml
+++ b/integration-tests/assets/reader_pod.yaml
@@ -2,15 +2,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    run: dev
-  name: dev
+    run: integration-test-reader
+  name: integration-test-reader
   namespace: eirini
 spec:
   containers:
     - command:
-        - bash
-      image: ubuntu
+        - sleep
+      args:
+        - "3600"
+      image: dperson/samba
       securityContext:
         privileged: true
       imagePullPolicy: Always
-      name: dev
+      name: integration-test-reader
+
