--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -40,6 +40,6 @@ helm_delete:
 	helm delete --purge smb-dev-broker
 
 fly:
-	fly -t persi execute -c /Users/pivotal/workspace/smb-volume-k8s-release/smb-broker/ci/unit-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release -p
+	fly -t persi execute -c $$HOME/workspace/smb-volume-k8s-release/smb-broker/ci/unit-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release -p
 
 .PHONY: install test fmt image-local-registry release helm helm_delete helm-dev fly image-dev
