--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -30,7 +30,7 @@ e2e:
 	cd test && pwd && ~/go/bin/ginkgo -r -focus "CSI Volumes"
 
 fly:
-	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=/Users/pivotal/workspace/smb-volume-k8s-release
+	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
 
 kustomize:
 	kubectl apply --kustomize ./overlays/deploy
