--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -1,3 +1,5 @@
+THIS_FILE := $(lastword $(MAKEFILE_LIST))
+
 build:
 	go build .
 
@@ -21,21 +23,24 @@ kill-docker:
 	pkill dockerd
 
 test:
+	@$(MAKE) -f $(THIS_FILE) image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
 	~/go/bin/ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
 
 e2e: SHELL:=/bin/bash
 e2e:
+	@$(MAKE) -f $(THIS_FILE) image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
 	cd test && pwd && ~/go/bin/ginkgo -r -focus "CSI Volumes"
 
 fly:
 	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/integration-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
 
+fly-e2e:
+	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/e2e-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
+
 kustomize:
 	kubectl apply --kustomize ./overlays/deploy
 
 kustomize-delete:
 	kubectl delete --kustomize ./overlays/deploy
-
-.PHONY: build test image-local-registry
