Add nodeserver and integration tests to the make 'test' task
[#171189875](https://www.pivotaltracker.com/story/show/171189875)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -23,8 +23,10 @@ kill-docker:
 	pkill dockerd
 
 test:
-	@$(MAKE) -f $(THIS_FILE) image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
+	pushd identityserver; ~/go/bin/ginkgo -race . || exit 1; popd
+	pushd nodeserver; ~/go/bin/ginkgo -race . || exit 1; popd
+	@$(MAKE) -f $(THIS_FILE) image-local-registry
 	~/go/bin/ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
 
 e2e: SHELL:=/bin/bash
@@ -44,3 +46,5 @@ kustomize:
 
 kustomize-delete:
 	kubectl delete --kustomize ./overlays/deploy
+
+.PHONY: test fly fly-e2e image-local-registry
