--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -43,3 +43,5 @@ helm_delete:
 
 fly:
 	fly -t persi execute -c $$HOME/workspace/smb-volume-k8s-release/smb-broker/ci/unit-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release -p
+
+.PHONY: test fly image-local-registry
