make target namespace for smb-broker configurable to work with "cf-workloads" namespace in cf-for-k8s
[#171062979](https://www.pivotaltracker.com/story/show/171062979)

Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -12,6 +12,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+targetNamespace: "cf-workloads"
 
 service:
   type: ClusterIP
