--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -61,6 +61,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: TARGET_NAMESPACE
+              value: {{ .Values.targetNamespace }}
           ports:
             - name: http
               containerPort: 8080
