Add dependency in csi driver Makefile
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -22,11 +22,11 @@ start-docker:
 kill-docker:
 	pkill dockerd
 
-test:
+test: image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
 	pushd identityserver; ~/go/bin/ginkgo -race . || exit 1; popd
 	pushd nodeserver; ~/go/bin/ginkgo -race . || exit 1; popd
-	@$(MAKE) -f $(THIS_FILE) image-local-registry
+
 	~/go/bin/ginkgo -flakeAttempts 3 -race -focus "(Identity|Node) Service"
 
 e2e: SHELL:=/bin/bash
