Fix makefile for integration tests
- Needs docker

Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/integration-tests/Makefile
+++ b/integration-tests/Makefile
@@ -3,3 +3,12 @@ test:
 	make --directory=../smb-broker image-local-registry
 	make --directory=../smb-csi-driver image-local-registry
 	~/go/bin/ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1 .
+
+start-docker:
+	start-docker &
+	echo 'until docker info; do sleep 5; done' >/usr/local/bin/wait_for_docker
+	chmod +x /usr/local/bin/wait_for_docker
+	timeout 300 wait_for_docker
+
+kill-docker:
+	pkill dockerd
