--- a/smb-csi-driver/Dockerfile
+++ b/smb-csi-driver/Dockerfile
@@ -4,6 +4,8 @@ ADD . /app/
 WORKDIR /app
 RUN go build -o main -mod=vendor .
 
+RUN apt update && apt -y install cifs-utils
+
 FROM golang
 RUN mkdir /app
 COPY --from=builder /app/main /app/main
