Prevent concourse builds from hanging if tests fail
- now make always kills docker even if specs fail
[#171270006](https://www.pivotaltracker.com/story/show/171270006)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/ci/e2e-tests.yml
+++ b/smb-csi-driver/ci/e2e-tests.yml
@@ -12,4 +12,4 @@ inputs:
 
 run:
   path: make
-  args: [ "--directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "e2e", "kill-docker" ]
+  args: [ "--keep-going", "--directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "e2e", "kill-docker" ]
