--- a/ci/integration-tests.yml
+++ b/ci/integration-tests.yml
@@ -12,4 +12,4 @@ inputs:
 
 run:
   path: make
-  args: [ "--directory=smb-volume-k8s-release/integration-tests", "start-docker", "test", "kill-docker" ]
+  args: [ "--keep-going", "--directory=smb-volume-k8s-release/integration-tests", "start-docker", "test", "kill-docker" ]
