--- a/smb-csi-driver/ci/unit-and-sanity-tests.yml
+++ b/smb-csi-driver/ci/unit-and-sanity-tests.yml
@@ -12,4 +12,4 @@ inputs:
 
 run:
   path: make
-  args: [ "--directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "test", "kill-docker" ]
+  args: [ "--keep-going", "directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "test", "kill-docker" ]
