Add protosanitizer to sanitize secrets
- Also add a dummy hardcoded secret to drive out plumbing secrets
[#171111481](https://www.pivotaltracker.com/story/show/171111481)

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -15,7 +15,7 @@ metadata:
   name: create-pv
 rules:
   - apiGroups: ["v1", ""]
-    resources: ["persistentvolumes", "persistentvolumeclaims"]
+    resources: ["persistentvolumes", "persistentvolumeclaims", "secrets"]
     verbs: ["get", "list", "create", "delete"]
 
 ---
