--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -15,14 +15,14 @@ metadata:
   name: create-pv
 rules:
   - apiGroups: ["v1", ""]
-    resources: ["persistentvolumes", "persistentvolumeclaims", "secrets"]
+    resources: ["persistentvolumes", "persistentvolumeclaims"]
     verbs: ["get", "list", "create", "delete"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: smb-broker-roles
+  name: smb-broker-pv-roles
 subjects:
   - kind: ServiceAccount
     name: {{ include "smb-broker.fullname" . }}
@@ -30,6 +30,30 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: create-pv
+  apiGroup: rbac.authorization.k8s.io
+
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  name: create-secret
+rules:
+  - apiGroups: ["v1", ""]
+    resources: ["secrets"]
+    verbs: ["create"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: smb-broker-secret-roles
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "smb-broker.fullname" . }}
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: create-secret
   apiGroup: rbac.authorization.k8s.io
 
 ---
