Make broker not put username and password in volume attributes
- StringData on secrets is a convenience setter but can not be used as a getter
[#171111418](https://www.pivotaltracker.com/story/show/171111418)

Co-authored-by: Lisa Cho <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -40,7 +40,7 @@ metadata:
 rules:
   - apiGroups: ["v1", ""]
     resources: ["secrets"]
-    verbs: ["create"]
+    verbs: ["get", "create", "delete"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
