--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -19,7 +19,7 @@ running	:=	"$(shell docker inspect -f '{{.State.Running}}' "kind-registry" 2>/de
 image-local-registry: SHELL:=/bin/bash
 image-local-registry:
 	[ $(running) != "true" ] && docker run \
-	    -d --restart=always -p "5000:5000" -e "REGISTRY_AUTH_SILLY_REALM=http://registry:5000/v2/"   -e "REGISTRY_AUTH=silly" -e "REGISTRY_AUTH_SILLY_SERVICE=registry:5000" --name "kind-registry" \
+	    --ip 172.17.0.2 -d --restart=always -p "5000:5000" -e "REGISTRY_AUTH_SILLY_REALM=http://registry:5000/v2/"   -e "REGISTRY_AUTH=silly" -e "REGISTRY_AUTH_SILLY_SERVICE=registry:5000" --name "kind-registry" \
 	    registry:2 || true
 
 helm:
