Use a more realistic target namspace of cf-workloads
[#168545788](https://www.pivotaltracker.com/story/show/168545788)

Authored-by: Paul Warren <pwarren@pivotal.io>

--- a/integration-tests/assets/reader_pod.yaml
+++ b/integration-tests/assets/reader_pod.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     run: integration-test-reader
   name: integration-test-reader
-  namespace: eirini
+  namespace: cf-workloads
 spec:
   containers:
     - command:
