--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -15,7 +15,7 @@ metadata:
   name: create-pv
 rules:
   - apiGroups: ["v1", ""]
-    resources: ["persistentvolumes", "persistentvolumeclaims"]
+    resources: ["persistentvolumes"]
     verbs: ["get", "list", "create", "delete"]
 
 ---
@@ -34,9 +34,36 @@ roleRef:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRole
+kind: Role
+metadata:
+  name: create-pvc
+  namespace: {{ .Values.targetNamespace }}
+rules:
+  - apiGroups: ["v1", ""]
+    resources: ["persistentvolumeclaims"]
+    verbs: ["get", "list", "create", "delete"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: smb-broker-pvc-roles
+  namespace: {{ .Values.targetNamespace }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "smb-broker.fullname" . }}
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: Role
+  name: create-pvc
+  apiGroup: rbac.authorization.k8s.io
+
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: Role
 metadata:
   name: create-secret
+  namespace: {{ .Values.targetNamespace }}
 rules:
   - apiGroups: ["v1", ""]
     resources: ["secrets"]
@@ -44,15 +71,16 @@ rules:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: smb-broker-secret-roles
+  namespace: {{ .Values.targetNamespace }}
 subjects:
   - kind: ServiceAccount
     name: {{ include "smb-broker.fullname" . }}
     namespace: {{ .Release.Namespace }}
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: create-secret
   apiGroup: rbac.authorization.k8s.io
 
