Add a basic auth handler to the broker api
- currently hardcoded to foo:bar

[#171135323](https://www.pivotaltracker.com/story/show/171135323)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-broker/helm/templates/deployment.yaml
+++ b/smb-broker/helm/templates/deployment.yaml
@@ -124,10 +124,16 @@ spec:
             httpGet:
               path: /v2/catalog
               port: http
+              httpHeaders:
+              - name: Authorization
+                value: Basic Zm9vOmJhcg==
           readinessProbe:
             httpGet:
               path: /v2/catalog
               port: http
+              httpHeaders:
+              - name: Authorization
+                value: Basic Zm9vOmJhcg==
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
