--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -12,6 +12,8 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+smbBrokerUsername: ""
+smbBrokerPassword: ""
 targetNamespace: "cf-workloads"
 
 service:
