--- a/smb-broker/Dockerfile
+++ b/smb-broker/Dockerfile
@@ -1,11 +1,4 @@
-FROM golang:alpine as builder
-RUN mkdir /app
-ADD . /app/
-WORKDIR /app
-RUN go build -o main -mod=vendor .
-
-FROM alpine
-RUN mkdir /app
-COPY --from=builder /app/main /app/main
-WORKDIR /app
-CMD ["./main"]
+FROM ubuntu
+RUN mkdir /smb-broker
+ADD . /smb-broker
+WORKDIR /smb-broker
