--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -8,6 +8,7 @@ install:
 
 test:
 	@$(MAKE) -f $(THIS_FILE) image-local-registry
+	@$(MAKE) -f $(THIS_FILE) push-local-image-source
 	ulimit -n 10000 && ulimit -a && GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo && GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
 
 fmt:
