Move Dockerfile for local source code to test dir
- Avoids breaking the pushing of regular docker image to dockerhub

[#170108403](https://www.pivotaltracker.com/story/show/170108403)

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -23,7 +23,7 @@ image-local-registry:
 
 push-local-image-source:
 	docker login localhost:5000 && \
-	docker build --no-cache -t cfpersi/smb-broker-source /Users/pivotal/workspace/smb-volume-k8s-release/smb-broker/ && \
+	docker build --no-cache -f ./test/Dockerfile -t cfpersi/smb-broker-source /Users/pivotal/workspace/smb-volume-k8s-release/smb-broker/ && \
 	docker tag cfpersi/smb-broker-source localhost:5000/cfpersi/smb-broker-source:latest && \
 	docker push localhost:5000/cfpersi/smb-broker-source:latest
 
