Provide missing 'delete' role to delete a configmap
- csi driver stores node publish requests in a config map, and needs to
delete it when it is done

[#170937101](https://www.pivotaltracker.com/story/show/170937101)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/base/csi-nodeplugin-rbac.yaml
+++ b/smb-csi-driver/base/csi-nodeplugin-rbac.yaml
@@ -17,7 +17,7 @@ rules:
     verbs: ["get", "list", "watch", "update"]
   - apiGroups: [""]
     resources: ["configmaps"]
-    verbs: ["get", "create", "update"]
+    verbs: ["get", "create", "update", "delete"]
   - apiGroups: ["storage.k8s.io"]
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch", "update"]
