Delete csi driver sanity tests
- move e2e tests to the top level directory of csi driver

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -31,7 +31,7 @@ e2e: SHELL:=/bin/bash
 e2e:
 	@$(MAKE) -f $(THIS_FILE) image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
-	cd test && pwd && ~/go/bin/ginkgo -r -focus "CSI Volumes"
+	~/go/bin/ginkgo -r -focus "CSI Volumes"
 
 fly:
 	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/unit-and-sanity-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
