Adopt the new Docker function when save the smbbroker image
[#170108403](https://www.pivotaltracker.com/story/show/170108403)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-broker/ci/unit-tests.yml
+++ b/smb-broker/ci/unit-tests.yml
@@ -10,5 +10,11 @@ image_resource:
 inputs:
   - name: smb-volume-k8s-release
 
+outputs:
+  - name: built-images
+
 run:
   path: smb-volume-k8s-release/smb-broker/ci/unit-tests.sh
+
+params:
+  SMB_BROKER_IMAGE_DESTINATION: "../../built-images/smb-broker.tgz"
