Refactor Makefile to catch main.go compilation errors on dev workstation
[#171473027](https://www.pivotaltracker.com/story/show/171473027)

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -26,6 +26,8 @@ kill-docker:
 	pkill dockerd
 
 test:
+	@$(MAKE) -f $(THIS_FILE) vet
+	@$(MAKE) -f $(THIS_FILE) build
 	go get github.com/onsi/ginkgo/ginkgo
 	cd identityserver && ~/go/bin/ginkgo -race .
 	cd nodeserver && ~/go/bin/ginkgo -race .
