--- a/smb-csi-driver/ci/unit-tests.yml
+++ b/smb-csi-driver/ci/unit-tests.yml
@@ -12,4 +12,4 @@ inputs:
 
 run:
   path: make
-  args: [ "--keep-going", "--directory=smb-volume-k8s-release/smb-csi-driver", "build", "vet", "test"]
+  args: [ "--keep-going", "--directory=smb-volume-k8s-release/smb-csi-driver", "test"]
