Stop using deprecated field
[#171503950]

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Lisa Burns <lcho@pivotal.io>

--- a/smb-csi-driver/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/base/csi-nodeplugin-smbplugin.yaml
@@ -11,7 +11,7 @@ spec:
       labels:
         app: csi-nodeplugin-smbplugin
     spec:
-      serviceAccount: csi-nodeplugin
+      serviceAccountName: csi-nodeplugin
       hostNetwork: true
       containers:
         - name: csi-attacher
