--- a/smb-csi-driver/base/csi-nodeplugin-rbac.yaml
+++ b/smb-csi-driver/base/csi-nodeplugin-rbac.yaml
@@ -11,7 +11,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumes"]
-    verbs: ["get", "list", "watch", "update"]
+    verbs: ["list"]
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["get", "list", "watch", "update"]
